# vioquad_land

./: .gitignore  CMakeLists.txt  CMakeListsGPT.txt  README.md  package.xml  quad_control.kdev4
.kdev4/: quad_control.kdev4
acado/: my_test.cpp  quad_test.cpp  quadrotor_PAMPC.cpp  quadrotor_mpc_codegen  simple_mpc.cpp  simple_test.cpp
acado/PAMPC/: CMakeLists.txt  quadrotor_pampc.cpp  quadrotor_pampc_codegen
acado/PAMPC/autogen_code/: test  test.cpp
acado/examples/quad_mpc/: CMakeLists.txt  generate.sh  quadrotor_mpc.cpp  quadrotor_mpc_codegen
acado/examples/quad_mpc/autogen_code/: acado_common.h  acado_solver.c  test
acado/examples/simple/: CMakeLists.txt  clean.sh  simple_mpc.cpp  test.cpp
acado/generated_code/: acado_common.h  acado_integrator.c  acado_solver.c  test
acado/generated_code_KEEP/: acado_common.h  acado_integrator.c  acado_qpoases_interface.cpp  acado_qpoases_interface.hpp  acado_solver.c  test  test.cpp
extra/log_analysis/: landing_metrics.ipynb  thrust_mapping.py  thrust_mapping_rosbag.ipynb  thrust_mapping_ulog.ipynb
extra/log_analysis/.ipynb_checkpoints/: thrust_mapping_devel-checkpoint.ipynb
extra/rviz/: paths.rviz
extra/simulation/: README.md  README_sim_setup.md  run_gazebo-classic.sh
extra/simulation/models/apriltag_landing_pad/: model.config  model.sdf
extra/simulation/models/apriltag_landing_pad/materials/scripts/: apriltag.material
extra/simulation/models/fisheye_camera/: fisheye_camera.sdf  model.config
extra/simulation/models/iris_downward_camera/: iris_downward_camera.sdf  model.config
extra/simulation/models/iris_no_gps/: iris_no_gps.sdf  model.config
extra/simulation/models/iris_with_cameras/: iris_with_cameras.sdf  model.config
extra/simulation/models/monocular_camera/: model.config  monocular_camera.sdf
extra/simulation/models/pinhole_camera/: model.config  pinhole_camera.sdf
extra/simulation/models/vi_camera/: model.config  vi_camera.sdf
extra/simulation/models/vi_camera/xacro/: component_snippets.xacro  vi_camera.urdf  vi_camera.urdf.xacro
extra/simulation/rotors_imu_plugin/: CMakeLists.txt  package.xml
extra/simulation/rotors_imu_plugin/include/rotors_imu_plugin/: gazebo_imu_plugin.h
extra/simulation/rotors_imu_plugin/src/: gazebo_imu_plugin.cpp
extra/simulation/worlds/: VIO_landing_pad.world  landing_pad.world  warehouse.world
extra/tests/: compare_traj_test.cpp  min_snap_traj_test.cpp  min_snap_traj_test2.cpp  min_snap_traj_test3.cpp  min_snap_traj_test4.cpp  plot_camera_FOV.ipynb  plot_traj.py  test_traj.csv
extra/tests/.ipynb_checkpoints/: plot_camera_FOV-checkpoint.ipynb
extra/tests/test_data/: keyframes.csv  keyframes_lab_search.csv  keyframes_squiggle.csv  test_traj.csv
extra/traj/: traj_1circ_20s.csv  traj_fig8_10s.csv  traj_fig8plus_12s.csv  traj_figS_24s.csv  traj_figW_13s.csv  traj_horiz_search.csv  traj_horiz_search_pi_quat.csv  traj_lab_search.csv  traj_lab_search_quat.csv  traj_nguyen_20s.csv  traj_short_lab_search_quat.csv  traj_squiggle.csv  traj_test_20s.csv  traj_vf_12s.csv
include/: acado_messages.h  controller.h  mavros_cmd.h  mavros_cmd_node.h  min_snap_traj.h  min_snap_traj_save.h  mpc.h  tracking_controller.h  trajectory_gen.h  trajectory_gen_node.h  visual_fiducial.h
launch/: .controller.launch.swp  controller.launch  mpc_control.launch  mpc_control_sim.launch  mpc_control_xavier.launch  sim_px4_control.launch  track_trajectory.launch  visual_fiducial.launch  visual_fiducial_track_traj.launch
log_analysis/: thrust_mapping_devel.ipynb
log_analysis/.ipynb_checkpoints/: thrust_mapping_devel-checkpoint.ipynb
msg/: FlatOutputs.msg
resources/log_analysis/: thrust_mapping_devel.ipynb
resources/traj/: traj_1circ_05s.csv  traj_1circ_10s.csv  traj_fig8_05s.csv  traj_figS_15s.csv  traj_figW_20s.csv  traj_figW_26s.csv  traj_forest_5.csv  traj_forest_6.csv  traj_line_20s.csv  traj_spring_20s.csv  traj_square_05s.csv  traj_square_10s.csv  traj_step_10s.csv  traj_vcp_15s.csv
src/: mavros_cmd_node.cpp  mpc_node.cpp  offb_node.cpp  offb_node.h  trajectory_gen_node.cpp  visual_fiducial_node.cpp
srv/: InitTraj.srv
traj/: traj_2hoop4post_08s.csv  traj_4circ_40s.csv  traj_circle_40s.csv  traj_cone_09s.csv  traj_fig8_20s.csv  traj_fig8plus_15s.csv  traj_figS_08s.csv  traj_figS_12s.csv  traj_forest_1.csv  traj_forest_2.csv  traj_forest_3.csv  traj_forest_4.csv  traj_line_05s.csv  traj_line_10s.csv  traj_rand1_20s.csv  traj_rand2_15s.csv  traj_square_20s.csv  traj_step_05s.csv  traj_step_20s.csv  traj_vcp_10s.csv  traj_vcp_20s.csv
